[project]
name = "claude-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
